--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,7 +26,11 @@
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('dashboard')}}">Dashboard</a>
         </li>
-        {% else %}
+        {% if current_user.id == 1 %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('admin')}}">admin page</a>
+        </li>
+        {% endif %} {% else %}
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('login')}}">Login</a>
         </li>
@@ -44,12 +48,14 @@
           <a class="nav-link" href="{{url_for('add_post')}}">add post</a>
         </li>
       </ul>
-      <form class="d-flex">
+      <form class="d-flex" method="POST" action="{{url_for('search')}}">
+        {{ form.hidden_tag() }}
         <input
           class="form-control me-2"
           type="search"
           placeholder="Search"
           aria-label="Search"
+          name="searched"
         />
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
