--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,21 @@
 h1{
     color: blue;
 }
-h2{
-    color: blue;
-}
-h3{
-    color: blue;
-}
+
 
 .allpostsbtn{
     display: block;
+}
+
+
+.dashcard{
+    width: 18rem;
+    align-items: flex-end;
+    height: 18rem;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.dshimg{
+    width: 100%;
 }
