--- a/templates/onepost.html
+++ b/templates/onepost.html
@@ -19,11 +19,18 @@
   <small>
     <p>ID: <span class="text-success">{{post.id}}</span></p>
     <p>By : <span class="text-success">{{post.poster.name}}</span></p>
-    <p><span class="text-primary">{{post.content}}</span></p></small
+    {% if post.poster.about_auther %}
+    <p>
+      about auther :
+      <span class="text-success">{{post.poster.about_auther}}</span>
+    </p>
+    {% endif %}
+    <p><span class="text-primary">{{post.content|safe}}</span></p></small
   >
 
   <br />
   <p>posted at : <span class="text-success">{{post.date_posted}}</span></p>
+  {% if post.poster_id == current_user.id %}
   <a
     href="{{url_for('edit_post',id=post.id)}}"
     class="btn btn-success btn-sm me-3"
@@ -34,6 +41,7 @@
     class="btn btn-danger btn-sm me-3"
     >delete post</a
   >
+  {% endif %}
 </div>
 <br />
 
