--- a/templates/posts.html
+++ b/templates/posts.html
@@ -24,11 +24,12 @@
   <small>
     <p>ID: <span class="text-success">{{post.id}}</span></p>
     <p>By : <span class="text-success">{{post.poster.name}}</span></p>
-    <p><span class="text-primary">{{post.content}}</span></p></small
+    <p><span class="text-primary">{{post.content|safe}}</span></p></small
   >
 
   <br />
   <p>posted at : <span class="text-success">{{post.date_posted}}</span></p>
+  {% if post.poster_id == current_user.id %}
   <a
     class="btn btn-outline-secondary"
     href="{{url_for('edit_post',id=post.id)}}"
@@ -38,6 +39,7 @@
   <a href="{{url_for('delete_post',id=post.id)}}" class="btn btn-danger me-3"
     >delete post</a
   >
+  {% endif %}
 </div>
 <br />
 {% endfor %} {% endblock %}
