--- a/templates/test_password.html
+++ b/templates/test_password.html
@@ -10,28 +10,32 @@ get_flashed_messages() %}
   ></button>
 </div>
 {% endfor %} {% if email %}
-<h1>form email: {{email}}</h1>
-<h1>from pw: {{password}}</h1>
+<div class="shadow p-3 my-5 bg-body rounded">
+  <h4>You Check About :</h4>
+  <h6>form email: {{email}}</h6>
+  <h6>from pw: {{password}}</h6>
+</div>
 {% if user_to_check.email %}
-<h1>------- i found this info --------</h1>
-<h2>DB name : <span class="text-success">{{user_to_check.name}}</span></h2>
-<h2>DB email : <span class="text-success">{{user_to_check.email}}</span></h2>
-<h2>
+<h1>I found this informations :</h1>
+<h6>DB name : <span class="text-success">{{user_to_check.name}}</span></h6>
+<h6>DB email : <span class="text-success">{{user_to_check.email}}</span></h6>
+<h6>
   DB password :
   <span class="text-success">{{user_to_check.password_hashed}}</span>
-</h2>
-<h2>
+</h6>
+<h6>
   DB color : <span class="text-success">{{user_to_check.favourate_color}}</span>
-</h2>
-<h2>this password is valid : <span class="text-danger">{{passed}}</span></h2>
+</h6>
+<h6>this password is valid : <span class="text-danger">{{passed}}</span></h6>
 {% else %}
-<h1>invalid email or password</h1>
+<h1>Invalid Email</h1>
+<p>can't found this user in our system please try again !!!</p>
 {% endif %} {% else %}
 <form method="POST" class="container w-50">
-  {{form.hidden_tag()}} {{form.email.label(class="form-label my-4")}}
-  {{form.email(class="form-control my-4")}}
-  {{form.password.label(class="form-label my-4")}}
-  {{form.password(class="form-control my-4")}}
+  {{form.hidden_tag()}} {{form.email.label(class="form-label mt-4")}}
+  {{form.email(class="form-control mt-1")}}
+  {{form.password.label(class="form-label mt-3")}}
+  {{form.password(class="form-control mt-1")}}
   <br />
   {{form.submit(class="btn btn-secondary")}}
 </form>
