--- a/templates/home.html
+++ b/templates/home.html
@@ -1,21 +1,39 @@
 {% extends 'base.html' %} {% block body %}
-<div class="my-2">
+<div class="shadow p-3 my-5 bg-body rounded">
   <div class="container">
     <div class="row">
-      <h1 class="col-6">this is home page</h1>
+      <h1 class="col-6">Welcome To PROF</h1>
       <a class="btn btn-primary col-6 allpostsbtn" href="{{url_for('posts')}}"
-        >All posts</a
+        >All Posts</a
       >
     </div>
   </div>
 </div>
 <div>
-  <img
-    src="{{url_for('static',filename='images/death.jpg')}}"
-    width="100%"
-    height="auto"
-    alt=""
-  />
+  <h4 class="mb-4">
+    <span class="shadow p-1 bg-body"> The Newest Posts :</span>
+  </h4>
+  {% for post in posts %}
+  <div class="card text-center">
+    <div class="card-header">{{post.poster.name}}</div>
+    <div class="card-body">
+      <h5 class="card-title">{{post.title}}</h5>
+      <p class="card-text">{{post.content|safe}}</p>
+      <a href="{{url_for('get_post',id=post.id)}}" class="btn btn-primary"
+        >details</a
+      >
+    </div>
+    <div class="card-footer text-muted">{{post.date_posted}}</div>
+  </div>
+  <br />
+  {% endfor %}
 </div>
 
 {% endblock %}
+
+<!-- <img
+  src="{{url_for('static',filename='images/death.jpg')}}"
+  width="100%"
+  height="auto"
+  alt=""
+/> -->
