--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,51 +1,66 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{url_for('home')}}">Flasker!</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand" href="{{url_for('home')}}">PROF!</a>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('user',name='abdalla mohamed')}}"
-            >Profile</a
-          >
-        </li>
         {% if current_user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('logout')}}">logout</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('dashboard')}}">Dashboard</a>
-        </li>
+        <div class="dropdown">
+          <li
+            class="nav-link dropdown-toggle"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            User
+          </li>
+          <ul class="dropdown-menu">
+            <li class="">
+              <a class="dropdown-item" href="{{url_for('user')}}">Profile</a>
+            </li>
+            <li class="">
+              <a class="dropdown-item" href="{{url_for('logout')}}">logout</a>
+            </li>
+            <li class="">
+              <a class="dropdown-item" href="{{url_for('dashboard')}}"
+                >Dashboard</a
+              >
+            </li>
+          </ul>
+        </div>
+
         {% if current_user.id == 1 %}
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('admin')}}">admin page</a>
         </li>
         {% endif %} {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('login')}}">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('add_user')}}">register</a>
-        </li>
+        <div class="dropdown">
+          <li
+            class="nav-link dropdown-toggle"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            User
+          </li>
+
+          <ul class="dropdown-menu">
+            <li class="">
+              <a class="dropdown-item" href="{{url_for('login')}}">Login</a>
+            </li>
+            <li class="">
+              <a class="dropdown-item" href="{{url_for('add_user')}}"
+                >register</a
+              >
+            </li>
+          </ul>
+        </div>
         {% endif %}
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('name')}}">enter name</a>
+          <a class="nav-link" href="{{url_for('test_pw')}}">Test PW</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('test_pw')}}">test PW</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{url_for('add_post')}}">add post</a>
+          <a class="nav-link" href="{{url_for('add_post')}}">Add Post</a>
         </li>
       </ul>
       <form class="d-flex" method="POST" action="{{url_for('search')}}">
