--- a/templates/search.html
+++ b/templates/search.html
@@ -2,12 +2,12 @@
 <div class="my-2">
   <div class="container">
     <div class="row">
-      <h1 class="">what you are searching for : {{search}}</h1>
+      <h1 class="">what you are searching for : "{{search}}"</h1>
       {% if posts %}
       {% for post in posts %}
       <div class="shadow p-3 my-5 bg-body rounded">
         <h3><a style="text-decoration: none;" href="{{url_for('get_post',id=post.id)}}">{{post.title}}</h3></a>
-        <p class="">{{post.content}}</p>
+        <p class="">{{post.content|safe}}</p>
       </div>
       {% endfor %}
       {% else %}
