--- a/templates/onepost.html
+++ b/templates/onepost.html
@@ -12,40 +12,70 @@
 </div>
 
 {% endfor %}
-<h1 style="text-align: center">All Posts</h1>
 
 <div class="shadow p-3 my-5 bg-body rounded">
-  <h3>{{post.title}}</h3>
-  <small>
-    <p>ID: <span class="text-success">{{post.id}}</span></p>
-    <p>By : <span class="text-success">{{post.poster.name}}</span></p>
-    {% if post.poster.about_auther %}
-    <p>
-      about auther :
-      <span class="text-success">{{post.poster.about_auther}}</span>
-    </p>
-    {% endif %}
-    <p><span class="text-primary">{{post.content|safe}}</span></p></small
-  >
+  <div class="container">
+    <div class="row">
+      <div class="col-8">
+        <h3>{{post.title}}</h3>
+        <small>
+          <p>ID: <span class="text-success">{{post.id}}</span></p>
+          <p>By : <span class="text-success">{{post.poster.name}}</span></p>
+          {% if post.poster.about_auther %}
+          <p>
+            about auther :
+            <span class="text-success">{{post.poster.about_auther}}</span>
+          </p>
+          {% endif %}
+          <p><span class="text-primary">{{post.content|safe}}</span></p></small
+        >
 
-  <br />
-  <p>posted at : <span class="text-success">{{post.date_posted}}</span></p>
-  {% if post.poster_id == current_user.id %}
-  <a
-    href="{{url_for('edit_post',id=post.id)}}"
-    class="btn btn-success btn-sm me-3"
-    >edit post</a
-  >
-  <a
-    href="{{url_for('delete_post',id=post.id)}}"
-    class="btn btn-danger btn-sm me-3"
-    >delete post</a
-  >
-  {% endif %}
+        <br />
+        <p>
+          posted at : <span class="text-success">{{post.date_posted}}</span>
+        </p>
+        {% if post.poster_id == current_user.id %}
+        <a
+          href="{{url_for('edit_post',id=post.id)}}"
+          class="btn btn-success btn-sm me-3"
+          >edit post</a
+        >
+        <a
+          href="{{url_for('delete_post',id=post.id)}}"
+          class="btn btn-danger btn-sm me-3"
+          >delete post</a
+        >
+        {% endif %}
+      </div>
+      <div class="col-4">
+        {% if post.post_pic %}
+        <img
+          class="onepostimg"
+          src="{{url_for('static',filename='images/'+post.post_pic)}}"
+          alt=""
+          align="center"
+          width="150px"
+          height="300px"
+        />
+
+        {% else %}
+        <img
+          class="onepostimg"
+          src="{{url_for('static',filename='images/profilepic.png')}}"
+          alt=""
+          align="center"
+          width="150px"
+          height="300px"
+        />
+        {% endif %}
+      </div>
+    </div>
+  </div>
 </div>
 <br />
-
-<a href="{{url_for('posts')}}" class="btn btn-secondary btn-sm mb-5"
-  >Back To All Posts</a
->
+<h1 style="text-align: center">
+  <a href="{{url_for('posts')}}" class="btn btn-secondary btn-sm mb-5"
+    >Back To All Posts</a
+  >
+</h1>
 {% endblock %}
