--- a/templates/posts.html
+++ b/templates/posts.html
@@ -16,30 +16,65 @@
 
 {% for post in posts %}
 <div class="shadow p-3 my-5 bg-body rounded">
-  <h3>
-    <a style="text-decoration: none" href="{{url_for('get_post',id=post.id)}}">
-      {{post.title}}</a
-    >
-  </h3>
-  <small>
-    <p>ID: <span class="text-success">{{post.id}}</span></p>
-    <p>By : <span class="text-success">{{post.poster.name}}</span></p>
-    <p><span class="text-primary">{{post.content|safe}}</span></p></small
-  >
+  <div class="container">
+    <div class="row">
+      <div class="col-8">
+        <h3>
+          <a
+            style="text-decoration: none"
+            href="{{url_for('get_post',id=post.id)}}"
+          >
+            {{post.title}}</a
+          >
+        </h3>
+        <small>
+          <p>ID: <span class="text-success">{{post.id}}</span></p>
+          <p>By : <span class="text-success">{{post.poster.name}}</span></p>
+          <p><span class="text-primary">{{post.content|safe}}</span></p></small
+        >
 
-  <br />
-  <p>posted at : <span class="text-success">{{post.date_posted}}</span></p>
-  {% if post.poster_id == current_user.id %}
-  <a
-    class="btn btn-outline-secondary"
-    href="{{url_for('edit_post',id=post.id)}}"
-  >
-    edit post</a
-  >
-  <a href="{{url_for('delete_post',id=post.id)}}" class="btn btn-danger me-3"
-    >delete post</a
-  >
-  {% endif %}
+        <br />
+        <p>
+          posted at : <span class="text-success">{{post.date_posted}}</span>
+        </p>
+        {% if post.poster_id == current_user.id %}
+        <a
+          class="btn btn-outline-secondary"
+          href="{{url_for('edit_post',id=post.id)}}"
+        >
+          edit post</a
+        >
+        <a
+          href="{{url_for('delete_post',id=post.id)}}"
+          class="btn btn-danger me-3"
+          >delete post</a
+        >
+        {% endif %}
+      </div>
+      <div class="col-4">
+        {% if post.post_pic %}
+        <img
+          class="onepostimg"
+          src="{{url_for('static',filename='images/'+post.post_pic)}}"
+          alt=""
+          align="center"
+          width="150px"
+          height="300px"
+        />
+
+        {% else %}
+        <img
+          class="onepostimg"
+          src="{{url_for('static',filename='images/defultpost.png')}}"
+          alt=""
+          align="center"
+          width="150px"
+          height="300px"
+        />
+        {% endif %}
+      </div>
+    </div>
+  </div>
 </div>
 <br />
 {% endfor %} {% endblock %}
